Closed Bug 1638672 Opened 5 years ago Closed 5 years ago

Artifacts on the Back button on the toolbar (Intel HD Graphics 530)

Categories

(Core :: Graphics: WebRender, defect)

x86_64
Windows 10
defect

Tracking

()

VERIFIED FIXED
mozilla79
Tracking Status
firefox78 --- wontfix
firefox79 --- verified

People

(Reporter: itiel_yn8, Assigned: kvark)

References

Details

(Keywords: correctness, nightly-community)

Attachments

(5 files, 1 obsolete file)

Attached image Screenshot

STR:
Absolutely no idea.

This comes and goes, mostly on the back button (and mostly exactly like the attached screenshot), though I rarely see similar artifacts on other buttons as well.
I had this for a while and tried to gather a solid (or any, really) STR but I got nothing.

Graphics driver is up-to-date from Intel.

btw, hovering the button (when it is activated) makes this go away until I un-hover the button, and later on the issue goes away completely. Not sure how (maybe a tab switch?).

Attached file about:support

(In reply to Itiel from comment #0)

and later on the issue goes away completely. Not sure how (maybe a tab switch?).

Nope, that's not it. Though resizing the window fixes it.

Thank you for filing this issue and providing the about:support info!
Could you also make a WR capture for us? It will appear as wr-capture directory in your home folder (e.g. "c:\users\username\wr-capture") after you hit "CTRL+SHIFT+3" (when you see the issue) in Firefox Nightly.

Severity: -- → S3
Flags: needinfo?(itiel_yn8)
OS: Unspecified → Windows 10
Hardware: Unspecified → x86_64
Summary: Artifacts on the Back button on the toolbar → Artifacts on the Back button on the toolbar (Intel HD Graphics 530)

Since filiing this bug I've seen it multiple times but couldn't capture it as it was gone as soon as I pressed Ctrl+Shift+3.
However, I managed to reproduce the same issue on checkboxes on reader mode, see attached.
I made a WR capture, and it's attached here as well.

Flags: needinfo?(itiel_yn8) → needinfo?(dmalyshau)
Attached image Screenshot

See the artifacts on the checkboxes.

Sigh, I forgot I can't upload here files > ~1MB.
You can download the capture from:
https://www.4shared.com/zip/3PpCqj8aea/wr-capture.html

I'm having troubles downloading it. Could you perhaps use https://send.firefox.com and send me a link by email?

Flags: needinfo?(dmalyshau) → needinfo?(itiel_yn8)

Email sent with this bug ID as the title.

Flags: needinfo?(itiel_yn8) → needinfo?(dmalyshau)

Thank you for the capture! I can now reproduce this and investigate on my side.
It looks like the image data (coming outside of WR) contains these artifacts. See image attached - taken from a RenderDoc capture on Linux. The selected pixel is on of the black ones within the image rectangle. Unexpectedly, the alpha of it is 0.94 instead of 0.
Perhaps, Andrew can find out more.

Flags: needinfo?(dmalyshau) → needinfo?(aosmond)

This looks like the same as bug 1634171. Dzmitry, you didn't attach a screenshot...

Flags: needinfo?(aosmond)
Attached image wr-black-line.png

It's the cached border, which we generated in previous frames, so the generation is not captured in the WR capture (unfortunately).
Re-generating this border segment fixes the issue, so it must have something to do with platform-specific behavior near the edges of the border rendering. I'm looking at it more.

What we are doing there is:

  1. clearing that 9x9 part with a scissor (fwiw, it's left top corner is aligned to 8x8 grid)
  2. doing one cs_border_solid pass on it with alpha-blending
  3. doing another cs_border_solid pass on it with alpha-blending

Unfortunately, I'm not seeing this issue on either Intel 630 or Intel 550 on Windows/Angle when replaying the capture (and forcing the cached render tasks to be invalidated). This somewhat suggests a driver bug. I'd love to investigate it on a machine that shows the problem.

See Also: → 1634294
See Also: → 1603515

Itiel, could you try reproducing the issue on this build produced by our treeherder here?

It changes the way we clear texture cache rectangles before rendering the border segments. Please don't forget to enable WR!

Flags: needinfo?(itiel_yn8)

This is a suggested workaround for an interesting visual bug that we see on
some platforms with Intel Broadwell GPUs.

Assignee: nobody → dmalyshau
Status: NEW → ASSIGNED

(In reply to Dzmitry Malyshau [:kvark] from comment #15)

Itiel, could you try reproducing the issue on this build produced by our treeherder here?

It changes the way we clear texture cache rectangles before rendering the border segments. Please don't forget to enable WR!

In testing now. May take a while, as I'm not seeing it all the time.
In the meantime, you may want addition testing from affected users in bug 1634171.

I can't reproduce the issue with this build.
That said, I haven't been active on this build all the time, and may have not been doing stuff that might trigger the issue.

Flags: needinfo?(itiel_yn8) → needinfo?(dmalyshau)

Thank you, Itiel! That matches reports we got from other people.
I've been trying to shape this into a change that can be landed, stay tuned!

Flags: needinfo?(dmalyshau)
See Also: → 1643838

This is a suggested workaround for an interesting visual bug that we see on
some platforms with Intel Broadwell GPUs.

Also reverts https://phabricator.services.mozilla.com/D57100

Attachment #9152860 - Attachment is obsolete: true
Pushed by dmalyshau@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d8b68a88624b Use shaders to clear texture cache regions r=geckoview-reviewers,gw,snorp
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla79
See Also: → 1649861

After 3 weeks using Nightly on 2 affected machines I think it's safe to assume this is fully fixed. Haven't seen the issue ever since.

Status: RESOLVED → VERIFIED

Set the firefox79 flag to verified based on previous comment.

See Also: → 1784093
See Also: → 1928829
See Also: → 2014745
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: