Bug 1638672 - Use shaders to clear texture cache regions r=geckoview-reviewers,gw,snorp

This is a suggested workaround for an interesting visual bug that we see on
some platforms with Intel Broadwell GPUs.

Also reverts https://phabricator.services.mozilla.com/D57100

Differential Revision: https://phabricator.services.mozilla.com/D78705